[gd_scene load_steps=6 format=3 uid="uid://t0fp1exe4bnd"]

[ext_resource type="Script" path="res://Scripts/start_screen.gd" id="1_6xmwd"]
[ext_resource type="FontFile" uid="uid://ch103gi2tob72" path="res://Assets/font/andina.ttf" id="1_eewb6"]
[ext_resource type="Texture2D" uid="uid://m4ub6oll4ikv" path="res://Assets/Invaders/Invader3-1.png" id="2_1w6ik"]
[ext_resource type="Texture2D" uid="uid://bn227mp3yqjlo" path="res://Assets/Invaders/Invader2-1.png" id="3_v672i"]
[ext_resource type="Texture2D" uid="uid://dy2h5dklc8h7p" path="res://Assets/Invaders/Invader1-1.png" id="4_sfri5"]

[node name="start_screen" type="CanvasLayer"]
script = ExtResource("1_6xmwd")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -305.5
offset_top = -284.5
offset_right = 305.5
offset_bottom = 284.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("1_eewb6")
theme_override_font_sizes/font_size = 108
text = "SPACE
INVADERS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 38

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="InvaderContainer1" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Invader1Texture" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/InvaderContainer1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("2_1w6ik")

[node name="Invader1Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/InvaderContainer1"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_eewb6")
theme_override_font_sizes/font_size = 30
text = " = 10 POINTS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InvaderContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Invader2Texture" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/InvaderContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
texture = ExtResource("3_v672i")

[node name="Invader2Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/InvaderContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_eewb6")
theme_override_font_sizes/font_size = 30
text = " = 20 POINTS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InvaderContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Invader3Texture" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/InvaderContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("4_sfri5")

[node name="Invader3Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/InvaderContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_eewb6")
theme_override_font_sizes/font_size = 30
text = " = 40 POINTS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_eewb6")
theme_override_font_sizes/font_size = 40
text = "PLAY SAPCE INVADERS"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_show_next_control"]
